Upgrade dependencies and fix test error.